# RobotSearch

./: .gitignore  README.md  notes.mkd
src/second_coursework/: CMakeLists.txt  package.xml  setup.py
src/second_coursework/action/: Search.action
src/second_coursework/launch/: other_bringup.launch
src/second_coursework/scripts/: main_node  roomservice  search_client
src/second_coursework/src/nodes/: main_node_node.py  roomservice_node.py  search_client_node.py
src/second_coursework/src/states/: detect_sm.py  detect_state.py  main_loop_cc.py  main_sm.py  move_sm.py  move_state.py
src/second_coursework/src/util/: decorators.py  extensions.py  la.py  mutex.py  types.py
src/second_coursework/srv/: GetRoomCoord.srv
