<?xml version="1.0"?>
<package format="2">
  <name>second_coursework</name>
  <version>0.0.0</version>
  <description>My submission for the second coursework!</description>
  <maintainer email="oliver.iliffe@kcl.ac.uk">Oliver Iliffe</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>

  <export></export>
</package>
